2008-01-09  Samuel Tardieu  <tardieu@gostai.com>

	Remove obsolete CPU overload detection.
	* include/kernel/ucomplaints.hh: Remove overload-related error.
	* src/ucomplaints.cc: Ditto.
	* include/kernel/userver.hh: Remove overload-related machinery.
	* src/userver.cc: Ditto.
	* src/uconnection.cc: Do not update time once more, it is already
	done in the server just before and after executing some code.

2008-01-09  Loic Fosse  <fosse@gostai.com>

	Implement break keyword.
	* src/ast/flow-exception.cc, src/ast/flow-exception.hh: New.
	* src/ast/ast.mk: Add flow-exception.{cc,hh}.
	* src/ast/ast.yml: Add a Throw node, which throw exceptions like
	the BreakException, used to implement the break keyword.
	* src/parser/ugrammar.y: Add rule to manage break keyword.
	* src/parser/utoken.l: Add TOK_BREAK.
	* src/runner/runner.cc, src/runner/runner.hh: Add behavior on a
	Throw node, and catch the BreakException in the appropriate places.

2008-01-08  Matthieu Nottale  <nottale@gostai.com>

	Limit dump depth to 3, make it accessible from URBI.
	* src/object/atom.hxx: pretty-print delegate as "<delegate>".
	* src/object/object-class.cc: Add dump Primitive, display dumped
	  result in multiple system (***) messages.
	* src/object/object.cc: Use xalloc/iword to implement a limit in
	  depth of calls to Object::dump. Rename "parents" into "protos".
	* src/uconnection.cc: Fix a bug in mkPrefix when the tag "" is
	 passed.

2008-01-08  Samuel Tardieu  <tardieu@gostai.com>

	Add missing files for distribution.
	* src/Makefile.am: Add missing files.
	* src/object/object.mk: Add missing files.

2008-01-08  Akim Demaille  <demaille@gostai.com>

	Free the AST bits that were run.
	* src/runner/runner.cc (Nary): When the top level Nary was processed,
	flush it.
	* src/uconnection.cc: Remove obsolete comments.

2008-01-08  Akim Demaille  <demaille@gostai.com>

	Fix graph generation.
	* dev/ast-graph-gen: Pass srcdir.

2008-01-08  Samuel Tardieu  <tardieu@gostai.com>
